@@ -12,10 +12,10 @@
 
    session_start();
 
-   if (!isset($config_php))
-      include("../config/config.php");
    if (!isset($strings_php))
       include("../functions/strings.php");
+   if (!isset($config_php))
+      include("../config/config.php");
    if (!isset($page_header_php))
       include("../functions/page_header.php");
    if (!isset($display_messages_php))
@@ -30,6 +30,7 @@
       include("../functions/plugin.php");
 
 
+   if (! isset($action)) { $action = ""; }
    if ($action == "delete" && isset($theid)) {
       removePref($data_dir, $username, "highlight$theid");
    } else if ($action == "save") {
@@ -52,6 +53,8 @@
    $available[5] = _("Flags");
    $available[6] = _("Size");
    
+   if (! isset($method)) { $method = ""; }
+
    if ($method == "up" && $num > 1) {
       $prev = $num-1;
       $tmp = $index_order[$prev];
